//===----------------------------------------------------------------------===//
// ActorEdge - ActorRuntime compatible protobuf schema
// This schema matches the envelope structure from swift-actor-runtime
//===----------------------------------------------------------------------===//

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option optimize_for = SPEED;
option swift_prefix = "ActorEdgeProto";

// InvocationEnvelope matches ActorRuntime.InvocationEnvelope
message InvocationEnvelope {
    string call_id = 1;
    string recipient_id = 2;
    string sender_id = 3;
    string target = 4;
    repeated string generic_substitutions = 5;
    bytes arguments = 6;  // Encoded array of arguments as single Data blob

    message Metadata {
        google.protobuf.Timestamp timestamp = 1;
        map<string, string> headers = 2;
    }
    Metadata metadata = 7;
}

// ResponseEnvelope matches ActorRuntime.ResponseEnvelope
message ResponseEnvelope {
    string call_id = 1;

    // Result matches ActorRuntime.InvocationResult
    oneof result {
        bytes success = 2;
        Void void = 3;
        Error failure = 4;
    }

    message Metadata {
        google.protobuf.Timestamp timestamp = 1;
        double execution_time = 2;
        map<string, string> headers = 3;
    }
    Metadata metadata = 5;

    message Void {}

    message Error {
        string kind = 1;
        string message = 2;
    }
}

// gRPC service definition
service DistributedActor {
    // Unary remote call
    rpc RemoteCall(InvocationEnvelope) returns (ResponseEnvelope);

    // Bidirectional streaming for advanced use cases
    rpc StreamCall(stream InvocationEnvelope) returns (stream ResponseEnvelope);
}
